<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_ubicacion"
            android:icon="@drawable/ic_position"
            android:title="@string/where" />
        <item
            android:id="@+id/nav_interno"
            android:icon="@drawable/ic_photos"
            android:title="@string/interno" />
        <item
            android:id="@+id/nav_entrada"
            android:icon="@drawable/ic_busin"
            android:title="@string/rutas_salida" />
        <item
            android:id="@+id/nav_salida"
            android:icon="@drawable/ic_busout"
            android:title="@string/rutas_salida" />
        <item
            android:id="@+id/nav_comunidad"
            android:icon="@drawable/ic_communities"
            android:title="@string/comunidad" />
        <item
            android:id="@+id/nav_acerca_de"
            android:icon="@drawable/ic_about"
            android:title="@string/acerca_de" />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_logout"
            android:title="@string/cerrar_sesion" />
    </group>



</menu>
